--- a/index.html
+++ b/index.html
@@ -684,12 +684,12 @@
                                     </div>
                                 </div>
                             </li>
-                            <!-- Card 2: Hatchiyack (Gomah) -->
-                            <li class="carousel-slide" data-id="pred_hatchiyack" data-name="GOMAH">
+                            <!-- Card 2: Gomah -->
+                            <li class="carousel-slide" data-id="pred_gomah" data-name="GOMAH">
                                 <div class="prediction-card-large">
                                     <div class="character-wrapper">
-                                        <img src="assets/pred_hatchiyack.png" class="char-art" alt="Gomah">
-                                        <div class="card-name-large" data-i18n="name_pred_hatchiyack">GOMAH</div>
+                                        <img src="assets/pred_gomah.png" class="char-art" alt="Gomah">
+                                        <div class="card-name-large" data-i18n="name_pred_gomah">GOMAH</div>
                                     </div>
                                 </div>
                             </li>
