--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dragon Ball Legends - Chronologie 2025</title>
+    <title>Dragon Ball Legends - Chronologie & Prédictions 2026</title>
+
+    <!-- Open Graph / Discord & Twitter Cards -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Dragon Ball Legends - Chronologie 2026">
+    <meta property="og:description"
+        content="Découvrez la chronologie des sorties majeures et vos prédictions pour 2026 !">
+    <meta property="og:image"
+        content="https://dragon-ball-legends-timeline.vercel.app/assets/custom_header_banner_pc.jpg">
+    <meta property="og:url" content="https://dragon-ball-legends-timeline.vercel.app/">
+    <meta name="theme-color" content="#FFD700">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Dragon Ball Legends - Chronologie 2026">
+    <meta name="twitter:description"
+        content="Découvrez la chronologie des sorties majeures et vos prédictions pour 2026 !">
+    <meta name="twitter:image"
+        content="https://dragon-ball-legends-timeline.vercel.app/assets/custom_header_banner_pc.jpg">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
