--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta property="og:title" content="Dragon Ball Legends - Chronologie Complète & Prédictions">
     <meta property="og:description"
         content="Retrouvez l'historique complet des sorties majeures et vos prédictions pour le futur !">
-    <meta property="og:image" content="https://dragon-ball-legends-timeline.vercel.app/assets/favicon.png">
+    <meta property="og:image" content="https://dragon-ball-legends-timeline.vercel.app/assets/favicon.png?v=3">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:url" content="https://dragon-ball-legends-timeline.vercel.app/">
     <meta name="theme-color" content="#FFD700">
 
@@ -19,7 +22,7 @@
     <meta name="twitter:title" content="Dragon Ball Legends - Chronologie Complète & Prédictions">
     <meta name="twitter:description"
         content="Retrouvez l'historique complet des sorties majeures et vos prédictions pour le futur !">
-    <meta name="twitter:image" content="https://dragon-ball-legends-timeline.vercel.app/assets/favicon.png">
+    <meta name="twitter:image" content="https://dragon-ball-legends-timeline.vercel.app/assets/favicon.png?v=3">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
