--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dragon Ball Legends - Chronologie Complète & Prédictions</title>
+    <title>Dragon Ball Legends - Chronologie</title>
 
     <!-- Open Graph / Discord & Twitter Cards -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Dragon Ball Legends - Chronologie Complète & Prédictions">
-    <meta property="og:description"
-        content="Retrouvez l'historique complet des sorties majeures et vos prédictions pour le futur !">
+    <meta property="og:title" content="Dragon Ball Legends - Chronologie">
+    <meta property="og:description" content="Retrouvez l'historique des sorties majeures !">
     <meta property="og:image" content="https://dragon-ball-legends-timeline.vercel.app/assets/summary.png">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
@@ -19,9 +18,8 @@
     <meta name="theme-color" content="#FFD700">
 
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Dragon Ball Legends - Chronologie Complète & Prédictions">
-    <meta name="twitter:description"
-        content="Retrouvez l'historique complet des sorties majeures et vos prédictions pour le futur !">
+    <meta name="twitter:title" content="Dragon Ball Legends - Chronologie">
+    <meta name="twitter:description" content="Retrouvez l'historique des sorties majeures !">
     <meta name="twitter:image" content="https://dragon-ball-legends-timeline.vercel.app/assets/summary.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
